v1.4.0 (2019.03.xx)
  - Update SQLite database engine to version 3.27.2
  - Add "Invalidate tuner device authorization codes after" advanced setting
  - Change default discovery interval from 5 minutes to 1 hour
  - Change default lineup discovery interval from 10 minutes to 45 minutes
  - Remove "Disable discovery of HDHomeRun RECORD devices" advanced setting
  - Retrieve DVR service authorization flag for tuner(s) during device discovery
  - Maintain database timestamps indicating when all backend data was last discovered
  - Log discovered HDHomeRun devices after device discovery completes
  - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
  - Fix bug preventing recording rule discovery from executing if "Delete expired date/time recording rules after" setting has changed
  - Fix bug causing unnecessary timer updates when series episodes are available via multiple channels

v1.3.13 (2019.02.12)
  - Update SQLite database engine to version 3.27.1
  - Update cURL library to version 7.64.0
  - Log detected stream properties (real-time, seekable, etc) for diagnostic purposes
  - Log unexpected zero length reads that occur on in-progress streams as errors
  - Detect and report dropped streams if data transfer rate falls to zero
  - Accurately set the media type (MIME type) stream indicator as reported by the DVR engine
  - Fix bug that caused a dropped stream to be waited on infinitely for more data to become available
  - Fix bug preventing Kodi from calling into SetRecordingLastPlayedPosition()

v1.3.12 (2019.02.02)
  - Fix bug introduced in v1.3.11 that prevented EPG listings for channels with subchannels (x.x) from loading

v1.3.11 (2019.02.02)
  - Update libhdhomerun library to version 2018.10.27
  - Use pipelined/multiplexed HTTP requests when accessing backend EPG data
  - Fix bug introduced in v1.3.9 that caused different EPG broadcast IDs to be generated