@@ -5,55 +5,55 @@
     <category id="general" label="30000">
       <group id="1" label="-1">
 
-        <setting id="use_broadcast_device_discovery" type="boolean" label="30110">
+        <setting id="use_broadcast_device_discovery" type="boolean" label="30110" help="30501">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="pause_discovery_while_streaming" type="boolean" label="30100">
+        <setting id="pause_discovery_while_streaming" type="boolean" label="30100" help="30502">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="prepend_channel_numbers" type="boolean" label="30107">
+        <setting id="prepend_channel_numbers" type="boolean" label="30107" help="30503">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="use_episode_number_as_title" type="boolean" label="30112">
+        <setting id="use_episode_number_as_title" type="boolean" label="30112" help="30504">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="discover_recordings_after_playback" type="boolean" label="30123">
+        <setting id="discover_recordings_after_playback" type="boolean" label="30123" help="30505">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="use_backend_genre_strings" type="boolean" label="30117">
+        <setting id="use_backend_genre_strings" type="boolean" label="30117" help="30506">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="show_drm_protected_channels" type="boolean" label="30118">
+        <setting id="show_drm_protected_channels" type="boolean" label="30118" help="30507">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="use_channel_names_from_lineup" type="boolean" label="30128">
+        <setting id="use_channel_names_from_lineup" type="boolean" label="30128" help="30508">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="delete_datetime_rules_after" type="integer" label="30108">
+        <setting id="delete_datetime_rules_after" type="integer" label="30108" help="30509">
           <level>0</level>
           <default>3</default>
           <constraints>
@@ -74,7 +74,7 @@
     <category id="discovery_intervals" label="30001">
       <group id="1" label="-1">
 
-        <setting id="discover_devices_interval" type="integer" label="30101">
+        <setting id="discover_devices_interval" type="integer" label="30101" help="30510">
           <level>0</level>
           <default>5</default>
           <constraints>
@@ -94,7 +94,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="discover_lineups_interval" type="integer" label="30102">
+        <setting id="discover_lineups_interval" type="integer" label="30102" help="30511">
           <level>0</level>
           <default>4</default>
           <constraints>
@@ -114,7 +114,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="discover_guide_interval" type="integer" label="30103">
+        <setting id="discover_guide_interval" type="integer" label="30103" help="30512">
           <level>0</level>
           <default>5</default>
           <constraints>
@@ -132,7 +132,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="discover_recordings_interval" type="integer" label="30104">
+        <setting id="discover_recordings_interval" type="integer" label="30104" help="30513">
           <level>0</level>
           <default>1</default>
           <constraints>
@@ -152,7 +152,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="discover_recordingrules_interval" type="integer" label="30105">
+        <setting id="discover_recordingrules_interval" type="integer" label="30105" help="30514">
           <level>0</level>
           <default>6</default>
           <constraints>
@@ -170,7 +170,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="discover_episodes_interval" type="integer" label="30106">
+        <setting id="discover_episodes_interval" type="integer" label="30106" help="30515">
           <level>0</level>
           <default>6</default>
           <constraints>
@@ -194,13 +194,13 @@
     <category id="edl" label="30003">
       <group id="1" label="-1">
 
-        <setting id="enable_recording_edl" type="boolean" label="30119">
+        <setting id="enable_recording_edl" type="boolean" label="30119" help="30516">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="recording_edl_folder" type="path" label="30120">
+        <setting id="recording_edl_folder" type="path" label="30120" help="30517">
           <level>0</level>
           <default></default>
           <constraints>
@@ -215,7 +215,7 @@
           </control>
         </setting>
 
-        <setting id="recording_edl_folder_is_flat" type="boolean" label="30129">
+        <setting id="recording_edl_folder_is_flat" type="boolean" label="30129" help="30518">
           <level>0</level>
           <default>false</default>
           <dependencies>
@@ -224,7 +224,7 @@
           <control type="toggle"/>
         </setting>
 
-        <setting id="recording_edl_cut_as_comskip" type="boolean" label="30130">
+        <setting id="recording_edl_cut_as_comskip" type="boolean" label="30130" help="30519">
           <level>0</level>
           <default>false</default>
           <dependencies>
@@ -233,7 +233,7 @@
           <control type="toggle"/>
         </setting>
 
-        <setting id="recording_edl_start_padding" type="integer" label="30121">
+        <setting id="recording_edl_start_padding" type="integer" label="30121" help="30520">
           <level>0</level>
           <default>0</default>
           <constraints>
@@ -249,7 +249,7 @@
           </control>
         </setting>
 
-        <setting id="recording_edl_end_padding" type="integer" label="30122">
+        <setting id="recording_edl_end_padding" type="integer" label="30122" help="30521">
           <level>0</level>
           <default>0</default>
           <constraints>
@@ -271,13 +271,13 @@
     <category id="advanced" label="30002">
       <group id="1" label="-1">
 
-        <setting id="use_direct_tuning" type="boolean" label="30111">
+        <setting id="use_direct_tuning" type="boolean" label="30111" help="30522">
           <level>0</level>
           <default>false</default>
           <control type="toggle"/>
         </setting>
 
-        <setting id="startup_discovery_task_delay" type="integer" label="30113">
+        <setting id="startup_discovery_task_delay" type="integer" label="30113" help="30523">
           <level>0</level>
           <default>3</default>
           <constraints>
@@ -290,7 +290,7 @@
           </control>
         </setting>
 
-        <setting id="stream_read_chunk_size" type="integer" label="30114">
+        <setting id="stream_read_chunk_size" type="integer" label="30114" help="30524">
           <level>0</level>
           <default>3</default>
           <constraints>
@@ -307,7 +307,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="stream_ring_buffer_size" type="integer" label="30115">
+        <setting id="stream_ring_buffer_size" type="integer" label="30115" help="30525">
           <level>0</level>
           <default>0</default>
           <constraints>
@@ -322,7 +322,7 @@
           <control type="spinner" format="integer"/>
         </setting>
 
-        <setting id="deviceauth_stale_after" type="integer" label="30131">
+        <setting id="deviceauth_stale_after" type="integer" label="30131" help="30526">
           <level>0</level>
           <default>6</default>
           <constraints>
